# AgentAI

./: .gitignore  AgentAI.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
MakeLIB/: agent.mk  cleangit.mk  dbase.mk  newgithub.mk  ollama.mk  processor.mk  python.mk  tag-manager.mk
data/: tags.txt  tags.txt.bak
src/agentai/: agent.mk  batch_processor.py  database.py  dbase.mk  main.py  scraper.py  tag_manager.py  translator.py
src/agentai/core/: database.py  scraper.py
src/agentai/lib/: __init__.py  auth_generator.py  batch_processor.py  processor.py  tag_manager.py
src/agentai/ui/: __init__.py  console.py  viewer.py
src/agentai/workers/: enricher.py
