[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentai"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "PyGamiQ", email = "pygamiq@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "deep-translator",
    "duckdb",
    "playwright",
    "playwright-stealth",
    "beautifulsoup4",
    "psutil",
    "requests"
]

[project.urls]
Documentation = "https://github.com/PyGamiQ/agentai#readme"
Issues = "https://github.com/PyGamiQ/agentai/issues"
Source = "https://github.com/PyGamiQ/agentai"

[tool.hatch.version]
path = "src/agentai/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/agentai tests}"

[tool.coverage.run]
source_pkgs = ["agentai", "tests"]
branch = true
parallel = true
omit = [
    "src/agentai/__about__.py",
]

[tool.coverage.paths]
agentai = ["src/agentai", "*/agentai/src/agentai"]
tests = ["tests", "*/agentai/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

playwright-stealth

playwright
